backend/be_err.txt
cargo :    Compiling backen
d v0.1.0 (C:\Users\Zhitn\De
sktop\Vvoice\backend)
At line:1 char:1
+ cargo check 2>&1 | Out-Fi
le be_err.txt -Encoding utf
8
+ ~~~~~~~~~~~~~~~~
    + CategoryInfo         
     : NotSpeci    fied: ( 
  Compili    ng ba...Vvoice
\ba    ckend):String) []   
 , RemoteException
    + FullyQualifiedE    rr
orId : NativeCo    mmandErr
or
 
error[E0412]: cannot find t
ype `DbChannel` in this sco
pe
  --> src\db.rs:57:56
   |
57 |     pub async fn get_a
ll_channels(&self) -> Resul
t<Vec<DbChannel>> {
   |                       
                           
      ^^^^^^^^^ not found i
n this scope
   |
help: you might be missing 
a type parameter
   |
23 | impl<DbChannel> Databa
se {
   |     +++++++++++

error[E0412]: cannot find t
ype `DbChannel` in this sco
pe
  --> src\db.rs:58:44
   |
58 |         let channels =
 sqlx::query_as::<_, DbChan
nel>("SELECT * FROM channel
s ORDER BY id ASC")
   |                       
                     ^^^^^^
^^^ not found in this scope
   |
help: you might be missing 
a type parameter
   |
23 | impl<DbChannel> Databa
se {
   |     +++++++++++

error[E0412]: cannot find t
ype `DbMessage` in this sco
pe
  --> src\db.rs:79:88
   |
79 |     pub async fn get_r
ecent_messages(&self, chann
el_id: i32, limit: i64) -> 
Result<Vec<DbMessage>> {
   |                       
                           
                           
           ^^^^^^^^^ not fo
und in this scope
   |
help: you might be missing 
a type parameter
   |
23 | impl<DbMessage> Databa
se {
   |     +++++++++++

error[E0412]: cannot find t
ype `DbMessage` in this sco
pe
  --> src\db.rs:80:44
   |
80 |         let messages =
 sqlx::query_as::<_, DbMess
age>(
   |                       
                     ^^^^^^
^^^ not found in this scope
   |
help: you might be missing 
a type parameter
   |
23 | impl<DbMessage> Databa
se {
   |     +++++++++++

warning: unused import: `Pg
PoolOptions`
 --> src\db.rs:3:30
  |
3 | use sqlx::postgres::{Pg
Pool, PgPoolOptions};
  |                        
      ^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_im
ports)]` (part of `#[warn(u
nused)]`) on by default

warning: unused import: `tr
acing::info`
 --> src\db.rs:4:5
  |
4 | use tracing::info;
  |     ^^^^^^^^^^^^^

warning: unused import: `Mu
mbleCodec`
 --> src\handler.rs:4:5
  |
4 |     MumbleCodec, Mumble
Packet, ServerSync, TextMes
sage, UserRemove, UserState
, Version,
  |     ^^^^^^^^^^^

warning: unused import: `Si
nkExt`
  --> src\handler.rs:12:15
   |
12 | use futures::{SinkExt,
 StreamExt};
   |               ^^^^^^^

warning: unused import: `to
kio_util::codec::Framed`
  --> src\handler.rs:17:5
   |
17 | use tokio_util::codec:
:Framed;
   |     ^^^^^^^^^^^^^^^^^^
^^^^^^^

error[E0599]: no function o
r associated item named `co
nnect` found for struct `db
::Database` in the current 
scope
  --> src\main.rs:33:24
   |
33 |     let db = Database:
:connect(&db_url).await?;
   |                       
 ^^^^^^^ function or associ
ated item not found in `db:
:Database`
   |
  ::: src\db.rs:7:1
   |
 7 | pub struct Database {
   | ------------------- fu
nction or associated item `
connect` not found for this
 struct
   |
   = help: items from trait
s can only be used if the t
rait is implemented and in 
scope
   = note: the following tr
aits define an item `connec
t`, perhaps you need to imp
lement one of them:
           candidate #1: `C
onnectOptions`
           candidate #2: `s
qlx::Connection`

warning: unused import: `St
reamExt`
  --> src\handler.rs:12:24
   |
12 | use futures::{SinkExt,
 StreamExt};
   |                       
 ^^^^^^^^^

Some errors have detailed e
xplanations: E0412, E0599.
For more information about 
an error, try `rustc --expl
ain E0412`.
warning: `backend` (bin "ba
ckend") generated 6 warning
s
error: could not compile `b
ackend` (bin "backend") due
 to 5 previous errors; 6 wa
rnings emitted
